--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,9 @@
   font-style: normal;
 }
 /* shared style */
+.secondary-bg {
+  background-color: #fff8f3;
+}
 .text-primasy {
   color: #fd6e0a;
 }
@@ -19,6 +22,15 @@
   border-radius: 5px;
   font-size: 20px;
   border: none;
+}
+.section-title {
+  font-size: 35px;
+  font-weight: 700;
+  color: #181818;
+}
+.section-description {
+  color: #757575;
+  font-size: 18px;
 }
 /* nav styles */
 nav {
@@ -72,4 +84,29 @@ nav ul li a {
 }
 .banner-profile-pic {
   width: 580px;
+}
+/* about styles */
+main {
+  width: 1140px;
+  margin: 0 auto;
+}
+.about {
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+  margin-top: 130px;
+}
+.about-items {
+  display: flex;
+  justify-content: space-around;
+}
+.item-title {
+  color: #757575;
+  font-size: 20px;
+  margin-bottom: 0;
+}
+.item-descrion {
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 0;
 }
