--- a/style/style.css
+++ b/style/style.css
@@ -32,6 +32,9 @@
   color: #757575;
   font-size: 18px;
 }
+.text-center {
+  text-align: center;
+}
 /* nav styles */
 nav {
   display: flex;
@@ -90,11 +93,14 @@ main {
   width: 1140px;
   margin: 0 auto;
 }
+main section {
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
 .about {
   border-radius: 10px;
   padding: 130px 150px;
   text-align: center;
-  margin-top: 130px;
 }
 .about-items {
   display: flex;
@@ -109,4 +115,34 @@ main {
   font-weight: 700;
   font-size: 20px;
   margin-top: 0;
+}
+/* skilles styles */
+.skills-container {
+  display: flex;
+  gap: 24px;
+}
+.skill {
+  padding: 30px;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+}
+/* resume section style */
+.resume-container {
+  display: flex;
+  gap: 24px;
+}
+.experience-sub-title {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.experience-description {
+  color: #757575;
+}
+.resume hr {
+  margin: 30px 5px;
+}
+.resume-download-cv {
+  margin-top: 50px;
 }
